--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,11 @@
 ---
 ---
+# 1: RL for Robotics
+# 2: Curriculum Learning for RL
+# 3: LLMs Reasoning
 
 @InProceedings{ICLR2024-Xu,
+  topic    = {2},
   author   = {Ziping Xu and Zifan Xu and Runxuan Jiang and Peter Stone and Ambuj Tewari},
   title    = {Sample Efficient Myopic Exploration Through Multitask Reinforcement Learning with Diverse Tasks},
   booktitle= {Proceedings of the International Conference on Learning Representations (ICLR)},
@@ -30,6 +34,7 @@ sample-efficiency.
 }
 
 @InProceedings{ICRA2024-Xu,
+  topic    = {1},
   author   = {Zifan Xu and Amir Hossain Raj and Xuesu Xiao and Peter Stone},
   title    = {Dexterous Legged Locomotion in Confined 3D Spaces with Reinforcement Learning},
   booktitle = {Proceedings of the 2024 IEEE International Conference on Robotics and Automation (ICRA)},
@@ -68,6 +73,7 @@ robot.
 }
 
 @inproceedings{IROS2023-Xu,
+  topic    = {1},
   bibtex_show={true},
   title={Learning Real-world Autonomous Navigation by Self-Supervised Environment Synthesis},
   author={Zifan Xu and Anirudh Nair and Xuesu Xiao and Peter Stone},
@@ -82,6 +88,7 @@ robot.
 }
 
 @misc{Latent2023-Xu,
+  topic    = {3},
   bibtex_show={true},
   preprint={true},
   selected={true},
@@ -93,6 +100,7 @@ robot.
 }
 
 @article{2023ICRA-Xu,
+  topic    = {1},
   bibtex_show={true},
   selected={true},
   title={Benchmarking Reinforcement Learning Techniques for Autonomous Navigation},
@@ -133,6 +141,7 @@ based navigation systems
 }
 
 @InProceedings{CollAs2023-Xu,
+  topic    = {2},
   bibtex_show={true},
   selected = {true},
   author = {Zifan Xu and Yulin Zhang and Shahaf S. Shperberg and Reuth Mirsky and Yuqian Jiang and Bo Liu and Peter Stone},
@@ -149,6 +158,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @article{SSRR2022-Ani,
+  topic    = {1},
   bibtex_show={true},
   title={DynaBARN: Benchmarking Metric Ground Navigation in Dynamic Environments},
   author={Anirudh Nair and Fulin Jiang and Kang Hou and Zifan Xu and Shuozhe Li and Xuesu Xiao and and Peter Stone},
@@ -160,6 +170,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @InProceedings{ICRA2021-Xu,
+  topic    = {1},
   bibtex_show={true},
   selected = {true},
   author = {Zifan Xu and Gauraang Dhamankar and Anirudh Nair and Xuesu Xiao and Garrett Warnell and Bo Liu and Zizhao Wang and Peter Stone},
@@ -177,6 +188,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @article{RAS2022-Xiao,
+  topic    = {1},
   bibtex_show={true},
   title={APPL: Adaptive Planner Parameter Learning},
   author={Xuesu Xiao and Zizhao Wang and Zifan Xu and Bo Liu and abd Gauraang Dhamankar and Anirudh Nair and Garrett Warnell and Peter Stone},
@@ -188,6 +200,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @InProceedings{DARL22-REUTH,
+  topic    = {2},
   bibtex_show={true},
   author = {Reuth Mirsky and Shahaf S. Shperberg and Yulin Zhang and Zifan Xu and Yuqian Jiang and Jiaxun Cui and Peter Stone},
   title = {Task Factorization in Curriculum Learning},
@@ -200,6 +213,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @article{GOLD-FACTUAL-LIYAN,
+  topic    = {3},
   bibtex_show={true},
   author = {Zifan Xu and Liyan Tang},
   title = {GOLD-FACTUAL: Learning to Generate Faithful Summaries from Models’ Generations},
@@ -209,6 +223,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @InProceedings{DARL22-ZIFAN,
+  topic    = {2},
   bibtex_show={true},
   author = {Zifan Xu and Yulin Zhang and Shahaf S. Shperberg and Reuth Mirsky and Yulin Zhan and Yuqian Jiang and Bo Liu and Peter Stone},
   title = {Model-Based Meta Automatic Curriculum Learning},
@@ -221,6 +236,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @InProceedings{ICML22-wang,
+  topic    = {1},
   bibtex_show={true},
   author = {Zizhao Wang and Xuesu Xiao and Zifan Xu and Yuke Zhu and Peter Stone},
   title = {Causal Dynamics Learning for Task-Independent State Abstraction},
@@ -233,6 +249,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 }
 
 @inProceedings {ICRA21-Yedidsion,
+  topic    = {1},
   bibtex_show={true},
 	author = {Harel Yedidsion and Jennifer Suriadinata and Zifan Xu and Stefan Debruyn and Peter Stone}, 
 	title = {A Scavenger Hunt for Service Robots},
