update resent pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,7 +79,12 @@ wwwnote={Available from <a href="https://arxiv.org/abs/2301.07799">https://arxiv
 @InProceedings{ICLR2024-Xu,
   topic    = {2},
   author   = {Ziping Xu and Zifan Xu and Runxuan Jiang and Peter Stone and Ambuj Tewari},
-  title    = {Sample Efficient Myopic Exploration Through Multitask Reinforcement Learning with Diverse Tasks},
+  title    = {<a href="https://openreview.net/forum?id=YZrg56G0JV">
+                <div class="link">
+                  Sample Efficient Myopic Exploration Through Multitask Reinforcement Learning with Diverse Tasks
+                </div>
+              </a>
+              },
   booktitle= {Proceedings of the International Conference on Learning Representations (ICLR)},
   year     = {2024},
   month    = {May},
@@ -274,6 +279,7 @@ Curriculum learning (CL) has been widely explored to facilitate the learning of 
 @InProceedings{DARL22-REUTH,
   topic    = {2},
   bibtex_show={true},
+  selected={true},
   author = {Reuth Mirsky and Shahaf S. Shperberg and Yulin Zhang and Zifan Xu and Yuqian Jiang and Jiaxun Cui and Peter Stone},
   title = {Task Factorization in Curriculum Learning},
   booktitle = {Decision Awareness in Reinforcement Learning (DARL) workshop at the 39th International Conference on Machine Learning (ICML)},
