--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -164,16 +164,38 @@ robot.
   },
 }
 
-@misc{Latent2023-Xu,
+@inproceedings{Latent2023-Xu,
   topic    = {3},
   bibtex_show={true},
-  preprint={true},
   selected={true},
-  title={Latent Skill Discovery for Chain-of-Thought Reasoning}, 
-  author={Zifan Xu and Haozhu Wang and Dmitriy Bespalov and Peter Stone and Yanjun Qi},
-  year={2024},
+  title={LaRS: Latent Reasoning Skills for Chain-of-Thought Reasoning}, 
+  author={Zifan Xu and Haozhu Wang and Dmitriy Bespalov and Xian Wu and Peter Stone and Yanjun Qi},
+  booktitle = {Findings of Empirical Methods in Natural Language Processing},
+  location = {Miami, Florida},
+  month    = {November},
+  year     = {2024},
   arxiv={2312.04684},
-  abstract={Recent advances in Large Language Models (LLMs) have led to an emergent ability of chain-of-thought (CoT) prompting, a prompt reasoning strategy that adds intermediate rationale steps between questions and answers to construct prompts. Conditioned on these prompts, LLMs can effectively learn in context to generate rationales that lead to more accurate answers than when answering the same question directly. To design LLM prompts, one important setting, called demonstration selection, considers selecting demonstrations from an example bank. Existing methods use various heuristics for this selection, but for CoT prompting, which involves unique rationales, it is essential to base the selection upon the intrinsic skills that CoT rationales need, for instance, the skills of addition or subtraction for math word problems. To address this requirement, we introduce a novel approach named Reasoning Skill Discovery (RSD) that use unsupervised learning to create a latent space representation of rationales, called a reasoning skill. Simultaneously, RSD learns a reasoning policy to determine the required reasoning skill for a given question. This can then guide the selection of examples that demonstrate the required reasoning skills. Our approach offers several desirable properties: it is (1) theoretically grounded, (2) sample-efficient, requiring no LLM inference or manual prompt design, and (3) LLM-agnostic. Empirically, RSD outperforms existing methods by up to 6% in terms of the answer accuracy across multiple reasoning tasks.},
+  abstract={Chain-of-thought (CoT) prompting is a popular in-context learning (ICL) approach
+for large language models (LLMs), especially when tackling complex reasoning
+tasks. Traditional ICL approaches construct prompts using examples that contain
+questions similar to the input question. However, CoT prompting, which includes
+crucial intermediate reasoning steps (rationales) within its examples,
+necessitates selecting examples based on these rationales rather than the
+questions themselves. Existing methods require human experts or pre-trained LLMs
+to describe the skill, a high-level abstraction of rationales, to guide the
+selection. These methods, however, are often costly and difficult to scale.
+Instead, this paper introduces a new approach named Latent Reasoning Skills
+(LaRS) that employs unsupervised learning to create a latent space representation
+of rationales, with a latent variable called a reasoning skill. Concurrently,
+LaRS learns a reasoning policy to determine the required reasoning skill for a
+given question. Then the ICL examples are selected by aligning the reasoning
+skills between past examples and the question. This approach is theoretically
+grounded and compute-efficient, eliminating the need for auxiliary LLM inference
+or manual prompt design. Empirical results demonstrate that LaRS consistently
+outperforms SOTA skill-based selection methods, processing example banks four
+times faster, reducing LLM inferences during the selection stage by half, and
+showing greater robustness to sub-optimal example banks.
+  },
 }
 
 @article{2023ICRA-Xu,
